@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013, 2014, 2015
+ * Copyright (C) 2013, 2014, 2015, 2016
  *      Andrew Hayzen <ahayzen@gmail.com>
  *      Daniel Holm <d.holmen@gmail.com>
  *      Victor Thompson <victor.thompson@gmail.com>
@@ -42,23 +42,6 @@ MultiSelectListView {
     delegate: MusicListItem {
         id: queueListItem
         color: player.currentIndex === index ? "#2c2c34" : styleMusic.mainView.backgroundColor
-        column: Column {
-            Label {
-                id: trackTitle
-                color: player.currentIndex === index ? UbuntuColors.blue : styleMusic.common.music
-                fontSize: "small"
-                objectName: "titleLabel"
-                text: model.title
-            }
-
-            Label {
-                id: trackArtist
-                color: styleMusic.common.subtitle
-                fontSize: "x-small"
-                objectName: "artistLabel"
-                text: model.author
-            }
-        }
         leadingActions: ListItemActions {
             actions: [
                 Remove {
@@ -69,6 +52,11 @@ MultiSelectListView {
         multiselectable: true
         objectName: "nowPlayingListItem" + index
         reorderable: true
+        title.color: player.currentIndex === index ? UbuntuColors.blue : styleMusic.common.music
+        title.text: model.title
+        title.objectName: "titleLabel"
+        subtitle.text: model.author
+        subtitle.objectName: "artistLabel"
         trailingActions: ListItemActions {
             actions: [
                 AddToPlaylist {
